app/stylesheets/main.less
//!
//! @file               main.less
//! @author             Geoffrey Hunter <gbmhunter@gmail.com> (www.mbedded.ninja)
//! @created            2015-11-02
//! @last-modified      2015-11-08
//! @brief              Contains the CSS styling for the NinjaCalc app.
//! @details
//!     See README.rst in repo root dir for more info.


html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

// Body contains content div
body {
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: sans-serif;
}

.calculatorTable {

    td {
        padding: 10px;
    }

    input.varDispVal:focus {
        border: solid 5px;

        &.ok {
            // This is a dark green colour
            border-color: #08A000;
        }

        &.warning {
            // This is a dark orange colour
            border-color: #C55900;
        }

        &.error {
            // This is a dark red colour
            border-color: #C50000;
        }
    }

    input.varDispVal {
        height: 26px;
        border: 2px solid;
        border-radius: 4px;

        padding: 2px;
        border: solid 5px #c9c9c9;

        // This gives a animation to the border when to goes
        // to the hover state
        transition: border 0.3s;

        &.ok {
            // This is a light green colour
            border-color: #5CDB55;
        }
        
        &.warning {
            // This is a light green orange
            border-color: #FFAA63;
        }

        &.error {
            // This is a light red colour
            border-color: #FF6363;
        }
    }

    .unitsCol {
        width: 70px;
    }
}

a {
    text-decoration: none;
}

.container {
    text-align: center;
}

.subtitle {
    color: gray;
}

// Custom react-select styling


// Commented out for now because maybe we don't need it?
/*
.Select-control {
  background-color: #fff;
  border-color: #d9d9d9 #ccc #b3b3b3;
  border-radius: 4px;
  border: 1px solid #ccc;
  color: #333;
  cursor: default;
  display: table;
  height: 24px;
  outline: none;
  overflow: hidden;
  position: relative;
  width: 100%;

  font-size: 14px;
}

.Select-placeholder {
  bottom: 0;
  color: #aaa;
  left: 0;
  line-height: 15px;
  padding-left: 10px;
  padding-right: 10px;
  position: absolute;
  right: 0;
  top: 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.Select-value {
  color: #aaa;
  left: 0;
  padding: 8px 20px 8px 10px;
  position: absolute;
  right: -15px;
  top: 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.Select-input {
  height: 18px;
  padding-left: 10px;
  padding-right: 10px;
  vertical-align: middle;
}*/

//===================== REACT-TOOLTIP STYLING ====================//

// Code taken from bootstrap library.

.tooltip {
  position: absolute;
  z-index: 1070;
  display: block;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: normal;
  line-height: 1.42857143;
  text-align: left;
  text-align: start;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  word-wrap: normal;
  white-space: normal;
  filter: alpha(opacity=0);
  opacity: 0;

  line-break: auto;
}
.tooltip.in {
  filter: alpha(opacity=90);
  opacity: .9;
}
.tooltip.top {
  padding: 5px 0;
  margin-top: -3px;
}
.tooltip.right {
  padding: 0 5px;
  margin-left: 3px;
}
.tooltip.bottom {
  padding: 5px 0;
  margin-top: 3px;
}
.tooltip.left {
  padding: 0 5px;
  margin-left: -3px;
}
.tooltip-inner {
  max-width: 200px;
  padding: 3px 8px;
  color: #fff;
  text-align: center;
  background-color: #000;
  border-radius: 4px;
}
.tooltip-arrow {
  position: absolute;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}
.tooltip.top .tooltip-arrow {
  bottom: 0;
  left: 50%;
  margin-left: -5px;
  border-width: 5px 5px 0;
  border-top-color: #000;
}
.tooltip.top-left .tooltip-arrow {
  right: 5px;
  bottom: 0;
  margin-bottom: -5px;
  border-width: 5px 5px 0;
  border-top-color: #000;
}
.tooltip.top-right .tooltip-arrow {
  bottom: 0;
  left: 5px;
  margin-bottom: -5px;
  border-width: 5px 5px 0;
  border-top-color: #000;
}
.tooltip.right .tooltip-arrow {
  top: 50%;
  left: 0;
  margin-top: -5px;
  border-width: 5px 5px 5px 0;
  border-right-color: #000;
}
.tooltip.left .tooltip-arrow {
  top: 50%;
  right: 0;
  margin-top: -5px;
  border-width: 5px 0 5px 5px;
  border-left-color: #000;
}
.tooltip.bottom .tooltip-arrow {
  top: 0;
  left: 50%;
  margin-left: -5px;
  border-width: 0 5px 5px;
  border-bottom-color: #000;
}
.tooltip.bottom-left .tooltip-arrow {
  top: 0;
  right: 5px;
  margin-top: -5px;
  border-width: 0 5px 5px;
  border-bottom-color: #000;
}
.tooltip.bottom-right .tooltip-arrow {
  top: 0;
  left: 5px;
  margin-top: -5px;
  border-width: 0 5px 5px;
  border-bottom-color: #000;
}

